[metadata]
name = hymie
author = Hernan E. Grecco
author_email = hernan.grecco@gmail.com
license = BSD
description = An web and e-mail based software for data collecting and authorization workflows.
long_description = file: README.rst
keywords = markdown, form
url = https://github.com/hgrecco/hymie
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Topic :: Text Processing :: Markup :: HTML
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = hymie
zip_safe = True
include_package_data = True
python_requires = >=3.6
install_requires = setuptools
    Flask==1.0.0
    Flask-WTF
    flask-emails
    Flask-Uploads
    Flask-Bootstrap4==4.0.2
    flask-httpauth
    pyyaml
    Werkzeug==0.14.1
    wtforms_components;
    serialize
    datastruct
    arrow;
    mdform>=0.2
    uwsgidecorators
setup_requires =
    setuptools
    setuptools_scm

[options.entry_points]
markdown.extensions =
    form = hymie:FormExtension

[options.extras_require]
test = pytest; pytest-cov

[check-manifest]
ignore =
    .travis.yml

[bdist_wheel]
universal = 1

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]

[flake8]
ignore=
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    build

[tool:pytest]
addopts = --pyargs

[isort]
default_section=THIRDPARTY
known_first_party=hymie
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[zest.releaser]
python-file-with-version = version.py